# otel-axum-experiement

./: .dockerignore  Cargo.toml  Dockerfile
.circleci/: config.yml
config/: development.toml
src/: main.rs  settings.rs
